[tool.poetry]
name = "arm-ae"
version = "0.1.0"
description = ""
authors = ["TheophileBERTELOOT <thber64@ulaval.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.3"
pandas = "^2.2.3"
torch = "^2.5.1"
click = "^8.1.7"
mlxtend = "^0.23.3"

[tool.poetry.scripts]
experiments = "arm_ae.experiment:cli"
ARMAE = "ARMAE:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
